--- a/osmfr.yml
+++ b/osmfr.yml
@@ -112,7 +112,7 @@ Layer:
               ('landuse_' || (case when landuse in ('quarry', 'vineyard', 'orchard', 'cemetery', 'grave_yard', 'residential', 'garages', 'field', 'meadow', 'grass', 'allotments', 'forest', 'farmyard', 'farm', 'farmyard','farmland', 'recreation_ground', 'conservation', 'village_green', 'retail', 'industrial', 'railway', 'commercial', 'brownfield', 'landfill', 'greenfield', 'construction', 'wood', 'school', 'harbour', 'salt_pond','greenhouse_horticulture') then landuse else null end)) as landuse,
               ('leisure_' || (case when leisure in ('swimming_pool', 'playground', 'park', 'recreation_ground', 'common', 'garden', 'golf_course') then leisure else null end)) as leisure,
               ('military_' || (case when military in ('barracks', 'danger_area') then military else null end)) as military,
-              ('natural_' || (case when "natural" in ('beach','desert','heath','mud','grassland','wood','sand','scrub','marsh','bare_rock') then "natural" else null end)) as "natural",
+              ('natural_' || (case when "natural" in ('beach','desert','heath','mud','grassland','wood','sand','scrub','marsh','bare_rock','reef') then "natural" else null end)) as "natural",
               ('power_' || (case when power in ('station','sub_station','generator','substation','plant') then power else null end)) as power,
               ('tourism_' || (case when  tourism in ('attraction', 'camp_site', 'caravan_site', 'picnic_site', 'zoo', 'museum') then tourism else null end)) as tourism,
               ('highway_' || (case when highway in ('services', 'rest_area') then highway else null end)) as highway,
@@ -125,7 +125,7 @@ Layer:
                 OR aeroway in ('apron','aerodrome')
                 OR amenity in ('parking', 'university', 'college', 'school', 'hospital','clinic', 'kindergarten', 'grave_yard','recycling','place_of_worship', 'public_building', 'townhall', 'courthouse', 'police', 'post_office', 'theatre','community_centre','social_facility')
                 OR military in ('barracks','danger_area')
-                OR "natural" in ('beach','desert','heath','mud','grassland','wood','sand','scrub','marsh','bare_rock')
+                OR "natural" in ('beach','desert','heath','mud','grassland','wood','sand','scrub','marsh','bare_rock','reef')
                 OR power in ('station','sub_station','generator','substation','plant')
                 OR tourism in ('attraction','camp_site','caravan_site','picnic_site','zoo','museum')
                 OR highway in ('services','rest_area')
