--- a/osmfr.yml
+++ b/osmfr.yml
@@ -476,7 +476,47 @@ Layer:
     zoom_min: 16
     Datasource:
       <<: *osm2pgsql
-      table: " /* golf */ (select way, geo, golf, ref, name, case when golf='rough' then 5 when golf='fairway' then 10  when golf='green' then 20  when golf='bunker' then 30 when golf in ('water_hazard','lateral_water_hazard') then 35 else 40 end as prio from (select way,tags->'golf' as golf, name, ref, way_area, 'polygon' as geo from planet_osm_polygon where tags ? 'golf' AND way && !bbox!  and way_area > !pixel_width!*!pixel_height!*10 UNION select p.way,p.tags->'golf' as golf, p.name, coalesce(p.ref,l.ref) as ref, 0 as way_area, 'point' as geo from planet_osm_point p LEFT JOIN planet_osm_line l ON (l.way && !bbox! AND ST_Intersects(p.way, l.way) AND l.tags ? 'golf') where p.tags ? 'golf' AND p.way && !bbox! UNION select way,tags->'golf' as golf, name, ref, 0 as way_area, 'line' as geo from planet_osm_line where tags ? 'golf' AND way && !bbox!) as golf order by prio) as golf"
+      table: >-
+        /* golf */ (
+          select way,
+            geo,
+            golf,
+            ref,
+            name,
+            case when golf='rough' then 5 when golf='fairway' then 10  when golf='green' then 20  when golf='bunker' then 30 when golf in ('water_hazard','lateral_water_hazard') then 35 else 40 end as prio
+          from (
+            select way,
+              tags->'golf' as golf,
+              name,
+              ref,
+              way_area,
+              '1_polygon' as geo
+            from planet_osm_polygon
+            where tags ? 'golf'
+              AND way && !bbox!
+              and way_area > !pixel_width!*!pixel_height!*10
+            UNION
+            select p.way,
+              p.tags->'golf' as golf,
+              p.name,
+              coalesce(p.ref,l.ref) as ref,
+              0 as way_area,
+              '3_point' as geo
+            from planet_osm_point p
+            LEFT JOIN planet_osm_line l ON (l.way && !bbox! AND ST_Intersects(p.way, l.way) AND l.tags ? 'golf')
+            where p.tags ? 'golf'
+              AND p.way && !bbox!
+            UNION
+            select way,tags->'golf' as golf,
+              name,
+              ref,
+              0 as way_area,
+              '2_line' as geo
+            from planet_osm_line
+            where tags ? 'golf'
+              AND way && !bbox!
+          ) as golf order by prio
+        ) as golf
 
 
   - id: ski
